--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "akp48-plugin-irc-commands",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "IRC Commands plugin for AKP48.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "preversion": "git checkout master && git pull && npm ls",
-    "publish-patch": "npm run preversion && npm version patch && git push origin master --tags && npm publish",
-    "publish-minor": "npm run preversion && npm version minor && git push origin master --tags && npm publish",
-    "publish-major": "npm run preversion && npm version major && git push origin master --tags && npm publish"
+    "preversion": "git checkout master && git pull --ff-only",
+    "postversion": "git push origin master --tags && npm publish"
   },
   "author": "Austin Peterson <austin@akpwebdesign.com> (http://akpwebdesign.com)",
   "contributors": [
