--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "akp48-plugin-irc-commands",
   "version": "1.0.2",
   "description": "IRC Commands plugin for AKP48.",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "preversion": "git checkout master && git pull --ff-only",
