--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "devDependencies": {
     "akp48-context": "0.0.1",
     "chai": "^3.5.0",
+    "codecov": "^1.0.1",
+    "istanbul": "^0.4.4",
     "mocha": "^2.5.3"
   }
 }
