Update .travis.yml and package.json

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ install:
   - npm install
   - npm install --only=dev
 script:
-  - istanbul cover node_modules/mocha/bin/mocha test/**/test-*.js --report lcovonly -- -R spec && codecov
+  - npm run coverage
+  - codecov
